# UIAuto

./: README.md  pyproject.toml
src/offline_ocr/: __init__.py  __main__.py
src/offline_ocr/cli/: __init__.py  main.py
src/offline_ocr/core/: __init__.py  base.py  engine_factory.py  paddle_engine.py
src/offline_ocr/gui/: main_window.py  threads.py
src/offline_ocr/gui/widgets/: canvas.py  canvas_items.py  sidebar.py  text_panel.py
src/offline_ocr/utils/: image_utils.py  pdf_utils.py
