[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "offline-ocr"
version = "0.1.0"
description = "A powerful, fully offline Python OCR tool featuring a modern CLI and PySide6 GUI"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = { text = "MIT" }
authors = [
    { name = "VincentYF", email = "yangfei@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "click>=8.1.0",
    "pyside6>=6.6.0",
    "numpy>=1.23.0,<2.0.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "pdf2image>=1.17.0",
    "pyyaml>=6.0.0",
    "platformdirs>=4.0.0",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0; sys_platform != 'darwin'",
]

[project.scripts]
offline-ocr = "offline_ocr.cli.main:main"
offline-ocr-gui = "offline_ocr.gui.main_window:run_gui"
